create BaseActivity for all the activities. add service callback for the user login service. create Menu Activity. create UserApi. create model User. create ServiceCallback interface for the services. create UserService. create object graph wrapper for the test. create Application Module and test application module. add test for UserService. create base test class. add product flavors(local, staging).

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -44,6 +44,7 @@
         />
 
     <TextView
+        android:id="@+id/login"
         android:text="로그인"
         android:textSize="30sp"
         android:gravity="center"
