--- a/app/src/main/res/layout/menu_activity.xml
+++ b/app/src/main/res/layout/menu_activity.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/day_off"
+        android:id="@+id/days_off"
         style="@style/AppTheme.PrimaryButton"
         android:layout_marginTop="60dp"
         android:text="휴가 신청"/>
