--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -6,14 +6,9 @@
 
     <TextView
         android:id="@+id/secret_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        android:text="휴가 관리"
-        android:textColor="@color/colorPrimary"
+        android:text="@string/app_name"
         android:layout_marginTop="100dp"
-        android:gravity="center"
+        style="@style/AppTheme.PrimaryTitleTextView"
         />
 
     <EditText
@@ -21,8 +16,8 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:hint="email address"
-        android:inputType="textVisiblePassword"
+        android:hint="@string/email_address"
+        android:inputType="textEmailAddress"
         android:drawableStart="@drawable/ic_user"
         android:drawablePadding="20dp"
         android:layout_centerHorizontal="true"
@@ -36,7 +31,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:inputType="textPassword"
-        android:hint="password"
+        android:hint="@string/password"
         android:drawablePadding="20dp"
         android:drawableStart="@drawable/ic_key"
         android:layout_centerHorizontal="true"
@@ -47,7 +42,7 @@
     <TextView
         style="@style/AppTheme.PrimaryButton"
         android:id="@+id/login"
-        android:text="로그인"
+        android:text="@string/login"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         />
